backend/docs/typecheck/reports/mypy_after_plugin_typecheck.txt
venv312/bin/python -m mypy \
		apps/core/infrastructure/throttling.py \
		apps/core/middleware_request_id.py \
		apps/core/exceptions_handlers.py \
		apps/core/httpx_clients.py \
		apps/core/config/django_runtime.py \
		apps/core/protocols/common_protocols.py \
		apps/core/dto/auth.py \
		apps/core/llm/config.py \
		apps/core/llm/service.py \
		apps/core/llm/router.py \
		apps/core/llm/backends/base.py \
		apps/core/services/wiring.py \
		apps/core/services/system_config_service.py \
		apps/core/security/secret_codec.py \
		apps/core/dependencies/automation_sms.py \
		apps/core/security/scrub.py \
		apps/automation/services/document/document_processing_service_adapter.py \
		apps/automation/services/token/trigger_reasons.py \
		apps/automation/services/scraper/core/token_service.py \
		apps/cases/services/case/case_service.py \
		apps/contracts/services/contract/contract_service_adapter.py \
		apps/organization/services/org_access_computation_service.py \
		apps/organization/services/wiring.py \
		--follow-imports=skip \
		--config-file mypy.ini
apps/automation/services/document/document_processing_service_adapter.py:24:5: error:
Function is missing a return type annotation  [no-untyped-def]
        def __init__(self):
        ^
apps/automation/services/document/document_processing_service_adapter.py:24:5: note: Use "-> None" if function does not return a value
apps/automation/services/document/document_processing_service_adapter.py:77:13: error:
Returning Any from function declared to return "str"  [no-any-return]
                return extract_docx_text(file_path, limit=limit)
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/automation/services/document/document_processing_service_adapter.py:103:13: error:
Returning Any from function declared to return "str"  [no-any-return]
                return text
                ^~~~~~~~~~~
apps/contracts/services/contract/contract_service_adapter.py:74:9: error:
Returning Any from function declared to return "list[dict[str, Any]]"
[no-any-return]
            return self.contract_service.get_all_parties(contract_id)
            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
apps/contracts/services/contract/contract_service_adapter.py:119:9: error:
Returning Any from function declared to return "list[Any]"  [no-any-return]
            return self.contract_service.supplementary_agreement_query_ser...
            ^
/Users/huangsong21/Downloads/Coding/AI/FachuanHybridSystem/backend/venv312/lib/python3.12/site-packages/django-stubs/http/request.pyi:56: error: INTERNAL ERROR -- Please try using mypy master on GitHub:
https://mypy.readthedocs.io/en/stable/common_issues.html#using-a-development-mypy-build
If this issue continues with mypy master, please report a bug at https://github.com/python/mypy/issues
version: 1.8.0
/Users/huangsong21/Downloads/Coding/AI/FachuanHybridSystem/backend/venv312/lib/python3.12/site-packages/django-stubs/http/request.pyi:56: : note: please use --show-traceback to print a traceback when reporting a bug
make: *** [typecheck] Error 2
